--- a/lib/templates/rescue.erb
+++ b/lib/templates/rescue.erb
@@ -27,7 +27,8 @@ var Hoptoad = {
 
     var
     script = document.createElement('script');
-    script.src  = 'http://' + this.host + '/notices/exist?' + data.join('&');
+    script.src  = 'http://' + this.host + '/notices_api/v1/notices/exist?' +
+                  data.join('&');
     script.type = 'text/javascript';
     script.onload = script.onreadystatechange = function(){
       if (!done && (!this.readyState ||
