Move Rails JS scenarios into separate feature and correctly support HTTPS when secure is enabled on the notifier.

--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://<%= host %>/javascripts/notifier.js"></script>
+<script type="text/javascript" src="http<%= 's' if secure %>://<%= host %>/javascripts/notifier.js"></script>
 <script type="text/javascript">
   Hoptoad.setKey('<%= api_key %>');
   Hoptoad.setHost('<%= host %>');
