--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -10,8 +10,8 @@ document.write(unescape("%3Cscript src='" + notifierJsScheme + "<%= host %>/java
   Hoptoad.setHost('<%= host %>');
   Hoptoad.setEnvironment('<%= environment %>');
     Hoptoad.setErrorDefaults({
-      url: "<%= request.url %>",
-      component: "<%= controller_name %>",
-      action: "<%= action_name %>"
+      url: "<%= a = "#{controller.request.protocol}#{controller.request.host_with_port}#{controller.request.request_uri}"; p a; a %>",
+      component: "<%= controller.controller_name %>",
+      action: "<%= controller.action_name %>"
   });
 </script>
