--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -5,9 +5,9 @@
 %>
 
 <%= javascript_tag %Q{
-    Hoptoad.setKey('#{api_key}');
-    Hoptoad.setHost('#{host}');
-    Hoptoad.setEnvironment('#{environment}');
-    Hoptoad.setErrorDefaults({ url: "#{escape_javascript url}", component: "#{controller_name}", action: "#{action_name}" });
+    Airbrake.setKey('#{api_key}');
+    Airbrake.setHost('#{host}');
+    Airbrake.setEnvironment('#{environment}');
+    Airbrake.setErrorDefaults({ url: "#{escape_javascript url}", component: "#{controller_name}", action: "#{action_name}" });
   } 
 %>
