Fix bug in defining the Airbrake javascript object

--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -6,7 +6,7 @@
 }%>
 
 <%= javascript_tag %Q{
-    window.Airbrake = Airbrake || Hoptoad;
+    window.Airbrake = (typeof(Airbrake) == 'undefined' && typeof(Hoptoad) != 'undefined') ? Hoptoad : Airbrake
     Airbrake.setKey('#{api_key}');
     Airbrake.setHost('#{host}');
     Airbrake.setEnvironment('#{environment}');
