point towards airbrake.io

--- a/lib/templates/rescue.erb
+++ b/lib/templates/rescue.erb
@@ -76,7 +76,7 @@ window.onload = function() {
 
 <style type="text/css">
 #airbrake {
-  background: #FFF url(http://airbrakeapp.com/images/fell-off-the-toad.gif) no-repeat top right;
+  background: #FFF url(http://airbrake.io/images/fell-off-the-toad.gif) no-repeat top right;
   color: #F00;
   padding: 45px 101px 45px 12px;
   font-size: 14px;
