Updated README, fixed JS rescue template missed HT reference.

--- a/lib/templates/rescue.erb
+++ b/lib/templates/rescue.erb
@@ -70,7 +70,7 @@ var Airbrake = {
 };
 
 window.onload = function() {
-  Airbrake.initialize.apply(Hoptoad);
+  Airbrake.initialize.apply(Airbrake);
 };
 </script>
 
