--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -1,7 +1,6 @@
 <%= javascript_tag %Q{
   (function(){
-    var notifierJsScheme = (("https:" == document.location.protocol) ? "https://" : "http://");
-    document.write(unescape("%3Cscript src='" + notifierJsScheme + "#{host}/javascripts/notifier.js' type='text/javascript'%3E%3C/script%3E"));
+    document.write(unescape("%3Cscript src='#{asset_path('airbrake-notifier.js')}' type='text/javascript'%3E%3C/script%3E"));
   })();
 }%>
 
