--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -1,15 +1,13 @@
 <%= javascript_tag %Q{
-  (function(){
-    var notifierJsScheme = (("https:" == document.location.protocol) ? "https://" : "http://");
-    document.write(unescape("%3Cscript src='" + notifierJsScheme + "#{host}/javascripts/notifier.js' type='text/javascript'%3E%3C/script%3E"));
-  })();
+  $(function(){
+    var notifierProtocol = (('https:' === document.location.protocol) ? 'https://' : 'http://');
+    $.getScript(notifierProtocol + '#{host}/javascripts/notifier.js')
+      .done(function() {
+        window.Airbrake = (typeof(Airbrake) == 'undefined' && typeof(Hoptoad) != 'undefined') ? Hoptoad : Airbrake
+        Airbrake.setKey('#{api_key}');
+        Airbrake.setHost('#{host}');
+        Airbrake.setEnvironment('#{environment}');
+        Airbrake.setErrorDefaults({ url: "#{escape_javascript url}", component: "#{controller_name}", action: "#{action_name}" });
+      });
+  });
 }%>
-
-<%= javascript_tag %Q{
-    window.Airbrake = (typeof(Airbrake) == 'undefined' && typeof(Hoptoad) != 'undefined') ? Hoptoad : Airbrake
-    Airbrake.setKey('#{api_key}');
-    Airbrake.setHost('#{host}');
-    Airbrake.setEnvironment('#{environment}');
-    Airbrake.setErrorDefaults({ url: "#{escape_javascript url}", component: "#{controller_name}", action: "#{action_name}" });
-  }
-%>
