--- a/lib/templates/javascript_notifier.erb
+++ b/lib/templates/javascript_notifier.erb
@@ -13,6 +13,8 @@
     Airbrake.setEnvironment('#{environment}');
     Airbrake.setErrorDefaults({ url: "#{escape_javascript url}", component: "#{controller_name}", action: "#{action_name}" });
   }
-  catch (e) {}
+  catch (e) {
+    window.onerror = null;
+  }
   }
 %>
