--- a/lib/generators/airbrake_initializer.rb.erb
+++ b/lib/generators/airbrake_initializer.rb.erb
@@ -52,6 +52,11 @@ Airbrake.configure do |c|
   c.ignore_environments = %w(test)
 end
 
+# A list of parameters that should be filtered out of what is sent to Airbrake.
+# By default, all "password" attributes will have their contents replaced.
+# https://github.com/airbrake/airbrake-ruby#the-keysblacklist-filter
+Airbrake.blacklist_keys(/password/i)
+
 # If Airbrake doesn't send any expected exceptions, we suggest to uncomment the
 # line below. It might simplify debugging of background Airbrake workers, which
 # can silently die.
