--- a/lib/generators/airbrake_initializer.rb.erb
+++ b/lib/generators/airbrake_initializer.rb.erb
@@ -54,12 +54,12 @@ Airbrake.configure do |c|
   # A list of parameters that should be filtered out of what is sent to
   # Airbrake. By default, all "password" attributes will have their contents
   # replaced.
-  # https://github.com/airbrake/airbrake-ruby#blacklist_keys
-  c.blacklist_keys = [/password/i, /authorization/i]
+  # https://github.com/airbrake/airbrake-ruby#blocklist_keys
+  c.blocklist_keys = [/password/i, /authorization/i]
 
   # Alternatively, you can integrate with Rails' filter_parameters.
   # Read more: https://goo.gl/gqQ1xS
-  # c.blacklist_keys = Rails.application.config.filter_parameters
+  # c.blocklist_keys = Rails.application.config.filter_parameters
 end
 
 # A filter that collects request body information. Enable it if you are sure you
